--- a/public/css/app-site.css
+++ b/public/css/app-site.css
@@ -11760,3 +11760,9 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+@media (max-width: 991px) {
+  .modal-body form {
+    overflow-x: scroll;
+  }
+}
+
