--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,19 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);.order-marker:before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left: 0;
+  top: 0;
+  background: red;
+  border-radius: 50%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #ff000070), color-stop(65%, red), color-stop(87%, red), color-stop(10%, #ff000070));
+  background: linear-gradient(#ff000070 10%, red 65%, red 87%, #ff000070 10%);
+  right: 0;
+  margin: auto;
+}
+
+/*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
  * Copyright 2011-2019 Twitter, Inc.
