--- a/resources/sass/site/_homepage.scss
+++ b/resources/sass/site/_homepage.scss
@@ -53,7 +53,7 @@ body *{
         }
     }
     .card-body {
-        ul {
+        >ul {
             list-style: none;
             padding-left: 0;
         }
@@ -111,3 +111,20 @@ body *{
     }
 }
 
+.card-body {
+    >ul {
+        list-style: none;
+        padding-left: 0;
+        >li {
+            a {
+                color:#212529;
+            }
+        }
+    }
+}
+.card-header {
+    button {
+        font-weight: bold;
+        color: #212529;
+    }
+}
