--- a/resources/sass/site/_homepage.scss
+++ b/resources/sass/site/_homepage.scss
@@ -128,3 +128,12 @@ body *{
         color: #212529;
     }
 }
+
+.card-footer {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    height: 100%;
+    min-height: 50px;
+}
