--- a/resources/sass/site/_homepage.scss
+++ b/resources/sass/site/_homepage.scss
@@ -133,6 +133,6 @@ body *{
     display: flex;
     align-items: center;
     align-content: center;
-    justify-content: center;
+    justify-content: center;rther
     min-height: 50px;
 }
