--- a/resources/sass/site/_homepage.scss
+++ b/resources/sass/site/_homepage.scss
@@ -133,6 +133,17 @@ body *{
     display: flex;
     align-items: center;
     align-content: center;
-    justify-content: center;rther
+    justify-content: center;
     min-height: 50px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
 }
